[gd_scene load_steps=15 format=3 uid="uid://u6dc5jwacglb"]

[ext_resource type="PackedScene" uid="uid://hv3q4g1hg5ha" path="res://assets/models/npc/npc_001.fbx" id="1_j388d"]
[ext_resource type="AnimationLibrary" uid="uid://cdlr0yiu6simk" path="res://assets/animations/All_Animations.tres" id="2_x1qv3"]
[ext_resource type="Script" uid="uid://glr2uml18crh" path="res://scripts/animation/animation_sequencer.gd" id="3_ln7ah"]
[ext_resource type="Script" uid="uid://bat76x8xqttar" path="res://scripts/dialogue/dialogue_interactable.gd" id="4_t2r07"]
[ext_resource type="PackedScene" uid="uid://d2nw21rtn1pq6" path="res://assets/dialogue/styles/gothic_silent_hill/Balloon.tscn" id="5_164uj"]
[ext_resource type="Resource" uid="uid://bhcp6jljxq8pj" path="res://assets/dialogue/dialogue/test_001.dialogue" id="6_onsw3"]
[ext_resource type="Script" uid="uid://c1eo4j34dxno3" path="res://scripts/dialogue/dialogue_settings.gd" id="7_gmrp0"]
[ext_resource type="Script" uid="uid://d4mre44gaciao" path="res://scripts/dialogue/dialogue_player_settings.gd" id="8_t7qix"]
[ext_resource type="Script" uid="uid://pqedudvcybfr" path="res://scripts/animation/head_look_at_controller.gd" id="9_l0oje"]

[sub_resource type="Shader" id="Shader_kaq2p"]
code = "shader_type spatial;
render_mode blend_mix, unshaded, cull_back;

uniform sampler2D screen_texture : hint_screen_texture, repeat_disable, filter_nearest;

// Mosaic controls
uniform float mosaic_pixel_size = 8.0;

void fragment() {	
	// setup the mask as something 
	//float mask = 1.0 - pow(clamp(base_col.a, 0.0, 1.0), mask_sharpness);
	
	vec2 suv = SCREEN_UV;
	
	// get pixels and quantize 
	vec2 vp = vec2(VIEWPORT_SIZE); // viewport resolution
	vec2 px_uv = suv * vp;
	vec2 q = floor(px_uv / mosaic_pixel_size) * mosaic_pixel_size + (mosaic_pixel_size * 0.5);
	vec2 mosaic_uv = q / vp;
	
	vec3 sampled_rgb = texture(screen_texture, mosaic_uv).rgb;
	
	EMISSION = sampled_rgb;
	ALBEDO = sampled_rgb;
	ALPHA = 1.0;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j388d"]
render_priority = 0
shader = SubResource("Shader_kaq2p")
shader_parameter/mosaic_pixel_size = 5.0

[sub_resource type="Resource" id="Resource_g1xht"]
script = ExtResource("7_gmrp0")
balloon_scene = ExtResource("5_164uj")
dialogue_resource = ExtResource("6_onsw3")
dialogue_start = "start"
metadata/_custom_type_script = "uid://c1eo4j34dxno3"

[sub_resource type="Resource" id="Resource_umgsa"]
script = ExtResource("8_t7qix")
is_repeatable = true
next_after_seconds = 5.0
metadata/_custom_type_script = "uid://d4mre44gaciao"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ap2pf"]
radius = 0.34088
height = 1.56803

[node name="npc" instance=ExtResource("1_j388d")]

[node name="Armature" parent="." index="0"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 4.52987e-08, 0, -4.52987e-08, 0.6, 0, 0, 0)

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(0.00236032, 0.605041, -0.222299)
bones/0/rotation = Quaternion(-0.260404, -0.0440122, -0.00230906, 0.964493)
bones/1/rotation = Quaternion(0.142866, 0.017245, 0.0108626, 0.989532)
bones/2/rotation = Quaternion(0.0987634, 0.0036987, 0.00183749, 0.995102)
bones/3/rotation = Quaternion(0.098747, 0.00314908, 0.0024025, 0.995105)
bones/4/rotation = Quaternion(0.183281, -0.00420149, -0.0134636, 0.982959)
bones/5/rotation = Quaternion(0.12358, -0.00500698, -0.0131853, 0.992234)
bones/8/rotation = Quaternion(0.534933, 0.436325, -0.618447, 0.375487)
bones/9/rotation = Quaternion(0.425737, 0.226217, 0.151932, 0.862839)
bones/10/rotation = Quaternion(0.0735239, -0.00218552, 0.616494, 0.783916)
bones/11/rotation = Quaternion(-0.260658, 0.25764, -0.123178, 0.922229)
bones/12/rotation = Quaternion(0.246804, 0.0988698, 0.267106, 0.926265)
bones/13/rotation = Quaternion(0.0415454, -0.00997417, -0.0844335, 0.995513)
bones/14/rotation = Quaternion(-0.00430765, -0.0019447, 0.0385715, 0.999245)
bones/17/rotation = Quaternion(0.111342, 0.00421157, 0.0255544, 0.993445)
bones/18/rotation = Quaternion(0.0587717, 5.16302e-06, -0.0136924, 0.998178)
bones/19/rotation = Quaternion(0.0293993, 1.75198e-05, -0.00644897, 0.999547)
bones/22/rotation = Quaternion(0.58953, -0.395274, 0.602431, 0.365089)
bones/23/rotation = Quaternion(0.423382, -0.134992, -0.0970503, 0.890565)
bones/24/rotation = Quaternion(0.0718034, 0.00223926, -0.623071, 0.778859)
bones/25/rotation = Quaternion(-0.244333, -0.37752, 0.101392, 0.887412)
bones/26/rotation = Quaternion(0.27174, -0.120279, -0.239727, 0.924241)
bones/27/rotation = Quaternion(-0.0186952, 0.0759377, 0.20414, 0.975813)
bones/28/rotation = Quaternion(-0.0397967, 0.0357904, -0.00296464, 0.998562)
bones/31/rotation = Quaternion(0.121376, -0.00404547, -0.0210578, 0.992375)
bones/32/rotation = Quaternion(0.115774, 5.5769e-05, 0.0193498, 0.993087)
bones/33/rotation = Quaternion(0.0579867, -0.000131175, 0.00805563, 0.998285)
bones/36/rotation = Quaternion(0.090259, 0.446322, 0.887028, -0.0763609)
bones/37/rotation = Quaternion(-0.749823, 0.012181, 0.0390843, 0.66037)
bones/38/rotation = Quaternion(0.568635, -0.00715253, 0.0311019, 0.821971)
bones/39/rotation = Quaternion(0.292691, -0.0566983, 0.017199, 0.95437)
bones/42/rotation = Quaternion(-0.0824466, 0.453978, 0.885365, 0.0568792)
bones/43/rotation = Quaternion(-0.750806, -0.0686161, 0.0544574, 0.654688)
bones/44/rotation = Quaternion(0.561538, -0.0584689, -0.0769365, 0.821789)
bones/45/rotation = Quaternion(0.29399, 0.0577608, -0.0173903, 0.953903)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(0.99949, -0.000585822, -0.031903, -0.0218197, 0.716977, -0.696755, 0.0232818, 0.697097, 0.716599, -0.0162055, 1.62251, -0.237015)
bone_name = "mixamorig1_Head"
bone_idx = 5

[node name="CensoredBlur" type="CSGBox3D" parent="Armature/Skeleton3D/BoneAttachment3D" index="0"]
transform = Transform3D(1.00003, -5.04777e-07, 2.76603e-07, -2.79397e-07, 1, -1.72853e-06, -1.81608e-07, 2.98023e-08, 1, 0.0135806, 0.151993, 0.0100708)
size = Vector3(0.343689, 0.576324, 0.439331)
material = SubResource("ShaderMaterial_j388d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Armature" index="1"]
libraries = {
&"All_Animations": ExtResource("2_x1qv3")
}
script = ExtResource("3_ln7ah")
play_on_ready = true
loop_sequence = true
sequence = Array[String](["All_Animations/SittingSketchy"])

[node name="DialogueInteractable" type="Area3D" parent="." index="1"]
script = ExtResource("4_t2r07")
dialogue_settings = SubResource("Resource_g1xht")
player_settings = SubResource("Resource_umgsa")
metadata/_custom_type_script = "uid://bat76x8xqttar"

[node name="CollisionShape3D" type="CollisionShape3D" parent="DialogueInteractable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0241189, 0.552854, -0.0852549)
shape = SubResource("CapsuleShape3D_ap2pf")

[node name="HeadLookAtController" type="Node3D" parent="." index="2" node_paths=PackedStringArray("skeleton", "interactable")]
script = ExtResource("9_l0oje")
skeleton = NodePath("../Armature/Skeleton3D")
interactable = NodePath("../DialogueInteractable")
follow_seconds = 10.0
metadata/_custom_type_script = "uid://pqedudvcybfr"
